2007-08-03  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.20.modules:
	* modulesets/gnome-suites-2.20.modules: move rarian to
	gnome-external-deps-2.20.modules

2007-08-01  Frederic Peters  <fpeters@0d.be>

	* doc/jhbuild.xml: added minor documentation fixes by C.J.
	Adams-Collier (closes: #462495)

2007-07-31  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* jhbuild/defaults.jhbuildrc: Add the default program for CVS.
	Fixes bug #462328.

2007-07-31  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: updated rarian to 0.5.6.

2007-07-31  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	reviewed by: Frederic Peters <fpeters@0d.be>

	* ChangeLog:
	* jhbuild/config.py:
	* jhbuild/versioncontrol/cvs.py (CVSRepository.__init__,
	  CVSRepository.branch):
	* jhbuild/versioncontrol/git.py (GitSvnBranch, GitSvnBranch.__init__,
	  GitSvnBranch._get_externals, GitSvnBranch._checkout,
	  GitSvnBranch._update, GitCvsBranch, GitCvsBranch.__init__,
	  GitCvsBranch._checkout, GitCvsBranch._update):
	* jhbuild/versioncontrol/svn.py (_make_uri, get_subdirs, get_externals,
	  SubversionRepository.branch):
	  Add git-svn and git-cvsimport support - need some manual work though 
	  (closes: #399402)
	
2007-07-31  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/modtypes/testmodule.py: added forgotten
	test module, required to run LDTP and Dogtail tests; use it to set
	accessibility environment variables (closes: #461710)

2007-07-29  Don Scorgie  <dscorgie@svn.gnome.org>

	* modulesets/gnome-suites-2.20.modules: 
	* modulesets/gnome-2.20.modules: 
	Switch from scrollkeeper to Rarian for
	2.20
	
2007-07-25  Colin Walters  <walters@redhat.com>
 
        * modulesets/online-desktop.modules:
        Strengthen deps online-desktop->bigboard->mugshot so online-desktop
        builds the whole chain.

2007-07-20  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.20.modules: