@@ -1,3 +1,9 @@
+2007-08-08  Mark McLoughlin  <markmc@redhat.com>
+
+	* jhbuild/versioncontrol/hg.py: explicitly support
+	ssh:// URIs since urlparse.urljoin() doesn't. See
+	bug #464641
+	
 2007-08-03  Vincent Untz  <vuntz@gnome.org>
 
 	* modulesets/gnome-external-deps-2.20.modules:
